--- a/css/sub_5.css
+++ b/css/sub_5.css
@@ -692,7 +692,6 @@ input[type='password'] {
 
 .login_do .trapezoid ul li a {
     color: #f1f5f7;
-
 }
 
 .con1 input[type='text']::placeholder,
@@ -790,267 +789,347 @@ input[type='password']::placeholder {
 
 /* header */
 
-/* 배너 */
+/*배너  */
 #banner {
+    background: url(../images/sub_5/banner.jpg) no-repeat center;
+    background-size: cover;
+    width: 100%;
+    height: 1070px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+}
+
+#banner .text {
+    width: 100%;
+    height: 1080px;
+    margin: 0 auto;
+    position: absolute;
+    background-color: #f1f5f7ee;
+    backdrop-filter: blur(10px);
+    line-height: 100px;
+    transform: skewX(-60deg);
+    left: -150%;
+}
+
+#banner:hover .text {
+    transform: skewX(0deg);
+    left: 0;   
+    transition: all 2s ease;
+    transition-delay: 0.5s;
+}
+
+#banner .text h2 {
+    margin-top: 400px;
+    font-size: 30px;
+    letter-spacing: 10px;
+    opacity: 0
+}
+
+#banner .text h1 {
+    font-size: 120px;
+    opacity: 0;
+}
+/* 
+#banner .text h2::before{content: ""; width: 140px; height: 30px; background: #e3e7e9; display: block; position: absolute; left: 50%;top: 40% ; transform: translateX(-50%); opacity: 1;}
+#banner .text:hover h2::before{transition: all 3s; opacity: 0;}
+
+#banner .text h2::after{content: ""; width: 1226px; height: 91px; background: #e3e7e9; display: block; position: absolute; left: 50%;top: 46% ; transform: translateX(-50%); opacity: 1;}
+#banner .text:hover h2::after{transition: all 3s; opacity: 0; transition-delay: 1s;}
+
+#banner .text h1::after{content: ""; width: 500px; height: 25px; background: #e3e7e9; display: block; position: absolute; left: 50%;top: 59% ; transform: translateX(-50%); opacity: 1;}
+#banner .text:hover h1::after{transition: all 3s; opacity: 0; transition-delay: 2 s;} */
+
+#banner .text p {
+    font-size: 24px;
+    font-family: 'S-CoreDream-3Light';
+    opacity: 0
+}
+#banner .text:hover h2{opacity: 1; transition: all 3s; transition-delay: 0s;}
+#banner .text:hover h1{opacity: 1;transition: all 3s; transition-delay: 1s;}
+#banner .text:hover p{opacity: 1;transition: all 3s; transition-delay: 2s;}
+
+
+#banner .text .line {
+    display: block;
+    position: relative;
+    width: clamp(1.33333px, 0.10417vw, 0.10417vw);
+    height: clamp(80px, 6.25vw, 6.25vw);
+    background-color: rgba(17, 17, 17, 0.1);
+    background-image: none;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-top: 50px;
+}
+
+
+
+#banner .text .line:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: clamp(1.33333px, 0.10417vw, 0.10417vw);
+    height: clamp(32px, 2.5vw, 2.5vw);
+    background-color: #5b54a4;
+    animation: scrollMot 2s infinite;
+}
+
+@keyframes scrollMot {
+    0% {
+        top: -60px;
+    }
+
+    100% {
+        top: 120px;
+    }
+}
+
+/* 콘텐츠1 */
+.content1 {
+    background: #ffe4ff;
+    width: 100%;
+    height: 1200px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+}
+
+.content1 .text {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.content1 .text h2 {
+    margin-top: 100px;
+    font-size: 18px;
+    letter-spacing: 10px;
+}
+
+.content1 .text h1 {
+    margin: 10px 0 30px;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+.content1 .text p {
+    font-size: 18px;
+    font-family: 'S-CoreDream-3Light';
+}
+
+.content1 .img{position: relative;width: 1400px; margin: 0 auto; height: 100%;} 
+.content1 .img img{display: block;} 
+
+.content1 .img img:nth-child(1){position: absolute; top: 20%; left: 40%; z-index: 10;} 
+.content1 .img img:nth-child(2){position: absolute; top: 15%; left: 44%; z-index: 1} 
+.content1 .img img:nth-child(3){position: absolute; top: 18%; left: 63%; z-index: 1} 
+.content1 .img img:nth-child(4){position: absolute; top: 37%; left: 62%; z-index: 10;} 
+.content1 .img img:nth-child(5){position: absolute; top: 27%; left: 69%; z-index: 1;} 
+.content1 .img img:nth-child(6){position: absolute; top: 21%; left: 28%; z-index: 1} 
+.content1 .img img:nth-child(7){position: absolute; top: 28%; left: 19%; z-index: 1} 
+.content1 .img img:nth-child(8){position: absolute; top: 21%; left: -5%; height: 400px;;} 
+.content1 .img img:nth-child(9){position: absolute; top: 9%; left: 51%; height: 400px} 
+.content1 .img img:nth-child(10){position: absolute; top: 57%; left: 35%;} 
+
+.content2 {
+    background: #f1f5f7;
+    width: 100%;
+    height: 1080px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;   
+}
+
+.content2 .text {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.content2 .text h2 {
+    padding-top: 100px;
+    font-size: 18px;
+    letter-spacing: 10px;
+}
+
+.content2 .text h1 {
+    margin: 10px 0 30px;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+.content2 .text p {
+    font-size: 18px;
+    font-family: 'S-CoreDream-3Light';
+}
+.content2 .icon{width: 1400px; display: flex; justify-content: space-around; margin: 200px auto; }
+
+.content2 .icon img{width: 200px; height: 200px;}
+.content2 .icon svg{width: 200px; height: 200px;}
+.content2 .icon p{margin: 50px 0; font-size: 18px;}
+
+.content3 {
+    background: #e8e7f7;
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;   
+}
+
+.content3 .text {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.content3 .text h2 {
+    padding-top: 100px;
+    font-size: 18px;
+    letter-spacing: 10px;
+}
+
+.content3 .text h1 {
+    margin: 10px 0 30px;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+.content3 .logo{width: 1080px; display: flex; justify-content: space-around; margin: 200px auto 100px}
+
+.content3 .logo img{height: 200px; width: 400px;}
+.content3 .logo .logo_txt{height: 200px;width: 500px; text-align: left; font-size: 18px;    font-family: 'S-CoreDream-3Light';}
+.content3 .logo .logo_txt p span:nth-child(1){font-family: 'S-CoreDream-6Bold';}
+.content3 .logo .logo_txt p span:nth-child(6),.content3 .logo .logo_txt p span:nth-child(3),.content3 .logo .logo_txt p span:nth-child(7),.content3 .logo .logo_txt p span:nth-child(9){background: linear-gradient(to top, #5b54a466 50%, transparent 10%); font-family:'S-CoreDream-5Medium';}
+
+.content3>p{font-family:'S-CoreDream-3Light';}
+.content3>button{font-family:'S-CoreDream-6Bold'; background: none; padding: 10px 20px; margin: 50px;}
+.content3>button:hover{background: #5b54a4; color: #f1f5f7;}
+
+.content4{
+    background: #ffffff;
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;   
+}
+.content4 .text {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.content4 .text h2 {
+    padding-top: 100px;
+    font-size: 18px;
+    letter-spacing: 10px;
+}
+
+.content4 .text h1 {
+    margin: 10px 0 30px;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+.content4 .color{
+    display: flex;
+    flex-direction: column;
+}
+
+.content4 .color_info{background: url(../images/sub_5/colorbg1.svg) no-repeat; width: 800px; height: 300px; margin: 50px auto; transform: translateX(-100px); display: flex; justify-content: space-around;}
+.content4 .color_info div{margin-top: 30px; line-height: 34px; }
+.content4 .color_info h1{font-size: 28px; padding: 30px 0;letter-spacing: 5px;}
+.content4 .color_info p{font-size: 18px;letter-spacing: 2px;}
+.content4 .color_txt{background: url(../images/sub_5/colorbg2.svg) no-repeat; width: 800px; height: 300px; margin: 50px auto; transform: translateX(100px)}
+.content4 .color_info div:nth-child(1),.content4 .color_info div:nth-child(3){color: #f1f5f7;}
+
+.content4 .color_txt p{font-family: 'S-CoreDream-3Light'; margin-top: 40px; font-size: 18px; line-height: 38px;}
+.content4 .color_txt p span{background: linear-gradient(to top, #5b54a466 50%, transparent 10%);}
+/* 푸터 */
+footer {
     width: 100%;
     margin: 0 auto;
-    height: 400px;
-    background: url(../images/sub_4/banner.jpg) no-repeat center;
+    height: 370px;
+    padding: 56px 80px;
+    background: #020721;
+    display: flex;
+    justify-content: center;
     box-sizing: border-box;
 }
 
-#banner .b_inner {
-    width: 1400px;
-    margin: 0 auto;
-    position: relative;
-}
-
-#banner .b_inner .inquiry {
-    float: right;
-    padding: 10px 20px;
-    margin-top: 84px;
-    background: #ffffff55;
-    border-radius: 10px;
-}
-
-#banner .b_inner .inquiry:hover {
-    background: #f1f5f7;
-}
-
-#banner .b_inner .inquiry:hover a {
-    color: #020721;
-}
-
-#banner .b_inner h1 {
-    text-align: center;
+footer .footer_inner {
     width: 100%;
-    padding-top: 120px;
-    color: #f1f5f7;
-    font-size: 40px;
-    margin-bottom: 74px;
 }
 
-#banner .b_inner form {
-    text-align: center;
-}
-
-#banner .b_inner span {
-    color: #f1f5f7;
-    padding: 10px 20px;
-    z-index: 1;
-}
-
-#banner .b_inner span img {
-    position: absolute;
-    top: 50%;
-    left: 12%;
-}
-
-#banner .b_inner input {
-    width: 800px;
-    height: 50px;
-    margin-right: 50px;
-    border: none;
-    padding: 0 50px;
-    background: url(../images/sub_4/icon2.png) no-repeat 2% 50% #fff;
-}
-
-#banner .b_inner input:focus {
-    outline: 4px solid #5b54a4;
-}
-
-/* 자주찾는 도움말 */
-.help {
-    width: 1400px;
-    margin: 120px auto 0;
-}
-
-.help h1 {
-    color: #5b54a4;
-    font-size: 24px;
+footer .footer_inner .footer_logo {
+    width: 126px;
+    float: left;
     margin-bottom: 50px;
 }
 
-.help .help_content ul {
-    display: flex;
-    justify-content: space-between;
+footer .footer_inner .footer_sns img {
+    width: 40px;
+    height: 40px;
+    opacity: 0.5;
 }
 
-.help .help_content ul li {
-    width: 230px;
-    height: 180px;
-    color: #f1f5f7;
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 80px;
-}
-.help .help_content ul li a{display: inline-block,; color: #f1f5f7;}
-.help .help_content ul li h2 {
-    font-family: 'S-CoreDream-6Bold';
-    font-size: 50px;
-    opacity: 0.8;
-    margin-bottom: 30px;
+footer .footer_inner .footer_sns img:hover {
+    opacity: 1;
+    transform: scale(2);
 }
 
-.help .help_content ul li p {
-    font-family: "S-CoreDream-3Light";
-    font-size: 16px;
+footer .footer_inner .footer_sns {
+    float: right;
 }
 
-.help .help_content .help_ul_1 li:nth-child(1) {
-    background-color: #b6b3da;
+footer .footer_inner .footer_sns li {
+    float: left;
+    margin-left: 20px;
 }
 
-.help .help_content .help_ul_1 li:nth-child(2),
-.help .help_content .help_ul_2 li:nth-child(1) {
-    background: #bfb3da;
-}
-
-.help .help_content .help_ul_1 li:nth-child(3),
-.help .help_content .help_ul_2 li:nth-child(2) {
-    background: #ccb3da;
-}
-
-.help .help_content .help_ul_1 li:nth-child(4),
-.help .help_content .help_ul_2 li:nth-child(3) {
-    background: #dab3d6;
-}
-
-.help .help_content .help_ul_1 li:nth-child(5),
-.help .help_content .help_ul_2 li:nth-child(4) {
-    background: #eba5ce;
-}
-
-.help .help_content .help_ul_2 li:nth-child(5) {
-    background: #eba4c4;
-}
-/* 호버효과 */
-.help .help_content .help_ul_1 li:nth-child(1):hover {
-    background-color: #6b61d4;
-}
-.help .help_content .help_ul_1 li:nth-child(2):hover,
-.help .help_content .help_ul_2 li:nth-child(1):hover {
-    background: #8b69db;
-}
-
-.help .help_content .help_ul_1 li:nth-child(3):hover,
-.help .help_content .help_ul_2 li:nth-child(2):hover {
-    background: #a764ce;
-}
-
-.help .help_content .help_ul_1 li:nth-child(4):hover,
-.help .help_content .help_ul_2 li:nth-child(3):hover {
-    background: #db64cf;
-}
-
-.help .help_content .help_ul_1 li:nth-child(5):hover,
-.help .help_content .help_ul_2 li:nth-child(4):hover {
-    background: #da51a1;
-}
-
-.help .help_content .help_ul_2 li:nth-child(5):hover {
-    background: #da3c83;
-}
-
-/* 문의 유형별 */
-.Inquiry_Type {
-    background: #f1f5f7;
-    padding-bottom: 100px;
-}
-
-.Inquiry_Type h1 {
-    width: 1400px;
-    margin: 0 auto;
-    color: #5b54a4;
-    font-size: 24px;
-    margin-bottom: 50px;
-    padding: 50px 0;
-}
-
-.Inquiry_Type_box {
-    width: 1400px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-.Inquiry_Type_box a {
-    display: inline-block;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: #5b54a4 5px solid;
-    text-align: center;
-    background-color: #fff;
-    transition: all 0.5s;
-}
-
-.Inquiry_Type_box a img {
-    width: 100px;
-    height: 100px;
-    margin-top: 30px;
-}
-
-.Inquiry_Type_box a span {
-    font-size: 18px;
-    font-family: 'S-CoreDream-6Bold';
+footer .footer_inner .footer_menu {
+    float: left;
+    clear: both;
     display: block;
+    border-bottom: #5b54a4 1px solid;
+    width: 100%;
+    padding-bottom: 72px;
+    box-sizing: border-box;
+    height: 32px;
 }
 
-.Inquiry_Type_box a:hover {
-    background: #5b54a4;
+footer .footer_inner .footer_menu li {
+    float: left;
+    margin-right: 20px;
+}
+
+footer .footer_inner .footer_menu li a {
     color: #f1f5f7;
+    font-size: 18px;
+    opacity: 0.5;
 }
-.Inquiry_Type_box a:hover img{filter: brightness(1000%);}
 
+footer .footer_inner .footer_menu li a:hover {
+    font-size: 32px;
+    opacity: 1;
+}
 
-/* 보안 */
-#security {    width: 1400px;    margin: 0 auto;}
-#security h1{font-size: 24px; border-bottom: #020721 2px solid; padding: 50px 0 20px;}
-    #security .security_box{width: 1400px; box-sizing: border-box; height: 350px;display: flex;margin-top: 20px; font-family: 'S-CoreDream-3Light'}
-    #security .security_box .box1{width: 400px;  box-sizing: border-box ; text-align: center; position: relative; padding: 50px 0;         
-        border-top: 2px #eee solid;
-        border-left: 2px #eee solid;
-        border-bottom: 2px #eee solid;    }
-    #security .security_box .box1 h2{font-family: 'S-CoreDream-3Light'; font-size: 24px;position: absolute; top: 50%; left: 50%; transform: translateX(-50%)}
-    #security .security_box .box1 h2 span{font-family: 'S-CoreDream-9Black'; font-size: 60px; }
-    #security .security_box .box1 p span{font-size: 18px; color: #5b54a4; font-family: 'S-CoreDream-5Medium';}
-    #security .security_box .box1 p {font-size: 14px;padding:  30px 0 0;}
-    
+footer .footer_inner p {
+    font-size: 14px;
+    color: #f1f5f7;
+    opacity: 0.5;
+}
 
-    
-    #security .security_box .box2{width: 1000px;box-sizing: border-box; border: #eee 2px solid; padding: 50px;}
-    #security .security_box .box2 h2{font-size: 18px;padding: 20px 0;}
-    #security .security_box .box2 p span{font-size: 18px; color: #5b54a4; font-family: 'S-CoreDream-5Medium';}
-    #security .security_box .box2 button{color: #f1f5f7; background: #ada9d1; width: 170px;height: 30px; ; border-radius: 10px; border: none ;font-family: 'S-CoreDream-5Medium'; margin-top: 50px;}
-    #security .security_box .box2 button:hover{background: #5b54a4;}
-    button{cursor: none;}
+footer .footer_inner .f_p1 {
+    float: left
+}
 
-/* 배너 */
-.banner{width: 1400px; margin: 50px auto; box-sizing: border-box; display: flex;height: 150px; }
-.banner .Shortcut{width: calc(100%/3); background: #ada9d1 ;height: 100%;}
-.banner .consulting{width: calc(100%/3); background: #bdbada; height: 100%;}
-.banner .telephone{width: calc(100%/3); background: #cecbe3; height: 100%;}
-.banner div{box-sizing: border-box; padding: 20px 30px; position: relative; overflow: hidden;}
-.banner div h1{margin-bottom: 30px;}
-.banner div ul{ list-style: disc; margin-left: 20px;}
-.banner div img{position: absolute; right: 0; top: 0; transform: rotate(-45deg); height: 100%; opacity: 0.2;}
+footer .footer_inner .f_p2 {
+    float: right
+}
 
-
-  /* 푸터 */
-  footer{width: 100%; margin: 0 auto; height: 370px; padding: 56px 80px; background: #020721; display: flex; justify-content: center; box-sizing: border-box;}
-  footer .footer_inner{width: 100%;}
-  footer .footer_inner .footer_logo{width: 126px; float: left; margin-bottom: 50px;}
-  footer .footer_inner .footer_sns img{width: 40px; height: 40px; opacity: 0.5;}
-  footer .footer_inner .footer_sns img:hover {opacity: 1; transform: scale(2);}
-  footer .footer_inner .footer_sns {float: right;}
-  footer .footer_inner .footer_sns li{float: left; margin-left: 20px;}
-
-  footer .footer_inner .footer_menu{float: left; clear: both; display: block; border-bottom:#5b54a4 1px solid ; width: 100%; padding-bottom: 72px; box-sizing: border-box; height: 32px;}
-  footer .footer_inner .footer_menu li{float: left; margin-right: 20px;}
-  footer .footer_inner .footer_menu li a{color: #f1f5f7; font-size: 18px; opacity: 0.5;}
-  footer .footer_inner .footer_menu li a:hover{ font-size: 32px; opacity: 1;}
-  footer .footer_inner p{font-size: 14px; color: #f1f5f7; opacity: 0.5;}
-  footer .footer_inner .f_p1{float: left}
-  footer .footer_inner .f_p2{float: right}
-  footer .footer_inner .f_text {padding:32px 0 56px;clear: both}
+footer .footer_inner .f_text {
+    padding: 32px 0 56px;
+    clear: both
+}
