--- a/css/sub_5.css
+++ b/css/sub_5.css
@@ -815,7 +815,7 @@ input[type='password']::placeholder {
 
 #banner:hover .text {
     transform: skewX(0deg);
-    left: 0;   
+    left: 0;
     transition: all 2s ease;
     transition-delay: 0.5s;
 }
@@ -831,6 +831,7 @@ input[type='password']::placeholder {
     font-size: 120px;
     opacity: 0;
 }
+
 /* 
 #banner .text h2::before{content: ""; width: 140px; height: 30px; background: #e3e7e9; display: block; position: absolute; left: 50%;top: 40% ; transform: translateX(-50%); opacity: 1;}
 #banner .text:hover h2::before{transition: all 3s; opacity: 0;}
@@ -846,9 +847,24 @@ input[type='password']::placeholder {
     font-family: 'S-CoreDream-3Light';
     opacity: 0
 }
-#banner .text:hover h2{opacity: 1; transition: all 3s; transition-delay: 0s;}
-#banner .text:hover h1{opacity: 1;transition: all 3s; transition-delay: 1s;}
-#banner .text:hover p{opacity: 1;transition: all 3s; transition-delay: 2s;}
+
+#banner .text:hover h2 {
+    opacity: 1;
+    transition: all 3s;
+    transition-delay: 0s;
+}
+
+#banner .text:hover h1 {
+    opacity: 1;
+    transition: all 3s;
+    transition-delay: 1s;
+}
+
+#banner .text:hover p {
+    opacity: 1;
+    transition: all 3s;
+    transition-delay: 2s;
+}
 
 
 #banner .text .line {
@@ -920,19 +936,86 @@ input[type='password']::placeholder {
     font-family: 'S-CoreDream-3Light';
 }
 
-.content1 .img{position: relative;width: 1400px; margin: 0 auto; height: 100%;} 
-.content1 .img img{display: block;} 
+.content1 .img {
+    position: relative;
+    width: 1400px;
+    margin: 0 auto;
+    height: 100%;
+}
 
-.content1 .img img:nth-child(1){position: absolute; top: 20%; left: 40%; z-index: 10;} 
-.content1 .img img:nth-child(2){position: absolute; top: 15%; left: 44%; z-index: 1} 
-.content1 .img img:nth-child(3){position: absolute; top: 18%; left: 63%; z-index: 1} 
-.content1 .img img:nth-child(4){position: absolute; top: 37%; left: 62%; z-index: 10;} 
-.content1 .img img:nth-child(5){position: absolute; top: 27%; left: 69%; z-index: 1;} 
-.content1 .img img:nth-child(6){position: absolute; top: 21%; left: 28%; z-index: 1} 
-.content1 .img img:nth-child(7){position: absolute; top: 28%; left: 19%; z-index: 1} 
-.content1 .img img:nth-child(8){position: absolute; top: 21%; left: -5%; height: 400px;;} 
-.content1 .img img:nth-child(9){position: absolute; top: 9%; left: 51%; height: 400px} 
-.content1 .img img:nth-child(10){position: absolute; top: 57%; left: 35%;} 
+.content1 .img img {
+    display: block;
+}
+
+.content1 .img img:nth-child(1) {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    z-index: 10;
+}
+
+.content1 .img img:nth-child(2) {
+    position: absolute;
+    top: 15%;
+    left: 44%;
+    z-index: 1
+}
+
+.content1 .img img:nth-child(3) {
+    position: absolute;
+    top: 18%;
+    left: 63%;
+    z-index: 1
+}
+
+.content1 .img img:nth-child(4) {
+    position: absolute;
+    top: 37%;
+    left: 62%;
+    z-index: 10;
+}
+
+.content1 .img img:nth-child(5) {
+    position: absolute;
+    top: 27%;
+    left: 69%;
+    z-index: 1;
+}
+
+.content1 .img img:nth-child(6) {
+    position: absolute;
+    top: 21%;
+    left: 28%;
+    z-index: 1
+}
+
+.content1 .img img:nth-child(7) {
+    position: absolute;
+    top: 28%;
+    left: 19%;
+    z-index: 1
+}
+
+.content1 .img img:nth-child(8) {
+    position: absolute;
+    top: 21%;
+    left: -5%;
+    height: 400px;
+    ;
+}
+
+.content1 .img img:nth-child(9) {
+    position: absolute;
+    top: 9%;
+    left: 51%;
+    height: 400px
+}
+
+.content1 .img img:nth-child(10) {
+    position: absolute;
+    top: 57%;
+    left: 35%;
+}
 
 .content2 {
     background: #f1f5f7;
@@ -940,7 +1023,7 @@ input[type='password']::placeholder {
     height: 1080px;
     margin: 0 auto;
     position: relative;
-    text-align: center;   
+    text-align: center;
 }
 
 .content2 .text {
@@ -964,11 +1047,117 @@ input[type='password']::placeholder {
     font-size: 18px;
     font-family: 'S-CoreDream-3Light';
 }
-.content2 .icon{width: 1400px; display: flex; justify-content: space-around; margin: 200px auto; }
 
-.content2 .icon img{width: 200px; height: 200px;}
-.content2 .icon svg{width: 200px; height: 200px;}
-.content2 .icon p{margin: 50px 0; font-size: 18px;}
+.content2 .icon {
+    width: 1400px;
+    display: flex;
+    justify-content: space-around;
+    margin: 200px auto;
+}
+
+.content2 .icon img {
+    width: 200px;
+    height: 200px;
+}
+
+.content2 .icon svg {
+    width: 200px;
+    height: 200px;
+}
+
+.content2 .icon p {
+    margin: 50px 0;
+    font-size: 18px;
+}
+
+.content2 .icon span {
+    color: #5b54a4;
+    font-size: 24px;
+    background: linear-gradient(to top, #5b54a466 20%, transparent 10%);
+}
+
+.content2 .icon .icon1 svg {
+    animation: a1 infinite 5s;
+}
+
+@keyframes a1 {
+
+    20% {
+        transform: skewX(15deg);
+    }
+
+    40% {
+        transform: skewy(15deg); filter: invert(0)
+    }
+
+    60% {
+        transform: skew(0deg);
+        transform: scale(1.1);
+        filter: invert(1)
+    }
+
+    80% {transform: scale(1.3);filter: invert(0)
+        
+    }
+
+    90% {
+        transform: scale(1.1); filter: invert(0.5)
+    }
+
+    100% {
+        transform: scale(1);filter: invert(0)
+    }
+}
+
+.content2 .icon .icon2 img {
+    animation: a2 infinite 5s;
+}
+
+@keyframes a2 {
+    0% {
+        transform-origin: 50% 100%;
+    }
+
+    30% {
+        transform: rotate(30deg);
+    }
+    40% {
+        transform: skewy(15deg); filter: invert(0)
+    }
+    60% {
+        transform: rotate(-30deg);
+        filter: invert(1);
+    }
+    80% {transform: scale(1.3);filter: invert(0)
+        
+    }
+    90% {
+        transform: scale(1.1); filter: invert(0.5)
+    }
+
+    100% {
+        transform: scale(1);filter: invert(0);
+    }
+}
+
+.content2 .icon .icon3 img {
+    animation: a3 infinite 5s;
+}
+
+@keyframes a3 {
+    10%{transform: scale(0.9);}
+    15%{transform: scale(1.1);}
+    30%{transform: scale(1.1);}
+    35%{transform: scale(1);}
+    40%{transform: scale(1.2);filter:}
+    60%{transform: scale(1.2);filter: brightness(1.5) }
+    65%{transform: scale(1.1);}
+    70%{transform: scale(1.3);}
+    80%{transform: scale(1.3); filter: brightness(1.3)}
+    85%{transform: scale(1.3);}
+    90%{transform: scale(1.1); filter: brightness(1.4)}
+    100%{transform: scale(1);filter: brightness(1)}
+}
 
 .content3 {
     background: #e8e7f7;
@@ -976,7 +1165,7 @@ input[type='password']::placeholder {
     height: 1000px;
     margin: 0 auto;
     position: relative;
-    text-align: center;   
+    text-align: center;
 }
 
 .content3 .text {
@@ -996,25 +1185,63 @@ input[type='password']::placeholder {
     line-height: 50px;
 }
 
-.content3 .logo{width: 1080px; display: flex; justify-content: space-around; margin: 200px auto 100px}
+.content3 .logo {
+    width: 1080px;
+    display: flex;
+    justify-content: space-around;
+    margin: 200px auto 100px
+}
 
-.content3 .logo img{height: 200px; width: 400px;}
-.content3 .logo .logo_txt{height: 200px;width: 500px; text-align: left; font-size: 18px;    font-family: 'S-CoreDream-3Light';}
-.content3 .logo .logo_txt p span:nth-child(1){font-family: 'S-CoreDream-6Bold';}
-.content3 .logo .logo_txt p span:nth-child(6),.content3 .logo .logo_txt p span:nth-child(3),.content3 .logo .logo_txt p span:nth-child(7),.content3 .logo .logo_txt p span:nth-child(9){background: linear-gradient(to top, #5b54a466 50%, transparent 10%); font-family:'S-CoreDream-5Medium';}
+.content3 .logo img {
+    height: 200px;
+    width: 400px;
+}
 
-.content3>p{font-family:'S-CoreDream-3Light';}
-.content3>button{font-family:'S-CoreDream-6Bold'; background: none; padding: 10px 20px; margin: 50px;}
-.content3>button:hover{background: #5b54a4; color: #f1f5f7;}
+.content3 .logo .logo_txt {
+    height: 200px;
+    width: 500px;
+    text-align: left;
+    font-size: 18px;
+    font-family: 'S-CoreDream-3Light';
+}
 
-.content4{
+.content3 .logo .logo_txt p span:nth-child(1) {
+    font-family: 'S-CoreDream-6Bold';
+}
+
+.content3 .logo .logo_txt p span:nth-child(6),
+.content3 .logo .logo_txt p span:nth-child(3),
+.content3 .logo .logo_txt p span:nth-child(7),
+.content3 .logo .logo_txt p span:nth-child(9) {
+    background: linear-gradient(to top, #5b54a466 50%, transparent 10%);
+    font-family: 'S-CoreDream-5Medium';
+}
+
+.content3>p {
+    font-family: 'S-CoreDream-3Light';
+}
+
+.content3>button {
+    font-family: 'S-CoreDream-6Bold';
+    background: none;
+    padding: 10px 20px;
+    margin: 50px;
+}
+
+.content3>button:hover {
+    background: #5b54a4;
+    color: #f1f5f7;
+}
+
+.content4 {
     background: #ffffff;
     width: 100%;
     height: 1000px;
     margin: 0 auto;
     position: relative;
-    text-align: center;   
+    text-align: center;
 }
+
 .content4 .text {
     width: 700px;
     margin: 0 auto;
@@ -1032,20 +1259,61 @@ input[type='password']::placeholder {
     line-height: 50px;
 }
 
-.content4 .color{
+.content4 .color {
     display: flex;
     flex-direction: column;
 }
 
-.content4 .color_info{background: url(../images/sub_5/colorbg1.svg) no-repeat; width: 800px; height: 300px; margin: 50px auto; transform: translateX(-100px); display: flex; justify-content: space-around;}
-.content4 .color_info div{margin-top: 30px; line-height: 34px; }
-.content4 .color_info h1{font-size: 28px; padding: 30px 0;letter-spacing: 5px;}
-.content4 .color_info p{font-size: 18px;letter-spacing: 2px;}
-.content4 .color_txt{background: url(../images/sub_5/colorbg2.svg) no-repeat; width: 800px; height: 300px; margin: 50px auto; transform: translateX(100px)}
-.content4 .color_info div:nth-child(1),.content4 .color_info div:nth-child(3){color: #f1f5f7;}
+.content4 .color_info {
+    background: url(../images/sub_5/colorbg1.svg) no-repeat;
+    width: 800px;
+    height: 300px;
+    margin: 50px auto;
+    transform: translateX(-100px);
+    display: flex;
+    justify-content: space-around;
+}
 
-.content4 .color_txt p{font-family: 'S-CoreDream-3Light'; margin-top: 40px; font-size: 18px; line-height: 38px;}
-.content4 .color_txt p span{background: linear-gradient(to top, #5b54a466 50%, transparent 10%);}
+.content4 .color_info div {
+    margin-top: 30px;
+    line-height: 34px;
+}
+
+.content4 .color_info h1 {
+    font-size: 28px;
+    padding: 30px 0;
+    letter-spacing: 5px;
+}
+
+.content4 .color_info p {
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
+.content4 .color_txt {
+    background: url(../images/sub_5/colorbg2.svg) no-repeat;
+    width: 800px;
+    height: 300px;
+    margin: 50px auto;
+    transform: translateX(100px)
+}
+
+.content4 .color_info div:nth-child(1),
+.content4 .color_info div:nth-child(3) {
+    color: #f1f5f7;
+}
+
+.content4 .color_txt p {
+    font-family: 'S-CoreDream-3Light';
+    margin-top: 40px;
+    font-size: 18px;
+    line-height: 38px;
+}
+
+.content4 .color_txt p span {
+    background: linear-gradient(to top, #5b54a466 50%, transparent 10%);
+}
+
 /* 푸터 */
 footer {
     width: 100%;
